r3:
	* Solucionado un fallo en galeria.php
	* Ahora comprueba que en la ruta indicada haya subcarpetas
	* Añadidos los archivos CHANGELOG y COPYING